<resources>
    <string name="app_name">gasApp</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="field_email">Email</string>
    <string name="field_password">Password</string>
    <string name="field_username">Username</string>
    <string name="field_repeat_password">Confirm Password</string>
    <string name="action_create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="order">Orders</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="storage_error">Local storage error</string>
    <string name="field_is_empty">Field is empty</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="account_already_exists">Account already exists</string>
    <string name="sign_up_success">Wow, you have created a new account. Now you can login with it.</string>
    <string name="remove">Remove</string>
    <string name="move_down">Move Down</string>
    <string name="move_up">Move Up</string>
    <string name="price">205.0т</string>
    <string name="oil_type">АИ-92</string>
    <string name="address">Address</string>
    <string name="account_name">Account name</string>
    <string name="created_at">Created at</string>
    <string name="station">Station AABB00</string>
    <string name="action_pay">Оплатить</string>
    <string name="take_oil_type">take oil type</string>
    <string name="action_1000">1000</string>
    <string name="action_2000">2000</string>
    <string name="action_3000">3000</string>
    <string name="action_5">5</string>
    <string name="action_10">10</string>
    <string name="action_20">20</string>
    <string name="enter_capacity">Введите объем:</string>
    <string name="enter_price">Введите сумму:</string>
    <string name="sum">Сумма</string>
    <string name="capacity">Объем</string>
    <string name="sum_default">0.0</string>
    <string name="capacity_default">0.0</string>
    <string name="field_created_at">Created at</string>
    <string name="profile_title_hint">user profile screen</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="action_logout">Logout</string>
    <string name="placeholder">-</string>
    <string name="channel_description">test description</string>
    <string name="channel_name">notification</string>
</resources>