<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/photoImageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_station_24" />

    <TextView
        android:id="@+id/stationNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/station"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/photoImageView"
        app:layout_constraintTop_toTopOf="@id/photoImageView" />

    <TextView
        android:id="@+id/createdAtTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:gravity="end"
        android:lines="1"
        android:text="@string/created_at"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/accountNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/accountNameTextView" />

    <TextView
        android:id="@+id/oilPriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/oilTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/oil_type"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/oilPriceTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/createdAtTextView"
        app:layout_constraintStart_toStartOf="@+id/stationNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/stationNameTextView" />

    <TextView
        android:id="@+id/accountNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="end"
        android:text="@string/account_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/oilTypeTextView"
        app:layout_constraintStart_toEndOf="@+id/stationNameTextView"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>