<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.auth.SignInFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInput"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="270dp"
        android:hint="@string/field_email"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInput"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:hint="@string/field_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextInput"
        app:layout_constraintVertical_bias="0.0" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="textPassword"
            android:imeOptions="actionDone" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signInButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/sign_in"
        android:textSize="16sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextInput" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#83ECECEC"
        android:text="@string/action_create_account"
        android:textColor="#000000"
        android:textSize="16sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton"
        app:layout_constraintVertical_bias="0"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpButton"/>


</androidx.constraintlayout.widget.ConstraintLayout>