<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.auth.SignUpFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInput"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="120dp"
        android:hint="@string/field_email"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameTextInput"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:hint="@string/field_username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextInput"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="text"
            android:imeOptions="actionNext" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInput"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:hint="@string/field_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextInput"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="textPassword"
            android:imeOptions="actionNext" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeatPasswordTextInput"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/field_repeat_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextInput"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeatPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="textPassword"
            android:imeOptions="actionDone" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/sign_up"
        android:textSize="16sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeatPasswordTextInput"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createAccountButton"/>



</androidx.constraintlayout.widget.ConstraintLayout>